force-app/main/default/objects/Lead/fields/SL_satsueikahaihatsutoiawasebi__c.field-meta.xml
<CustomField>
    <fullName>SL_satsueikahaihatsutoiawasebi__c</fullName>
    <label>SL_撮影開発問い合わせ日</label>
    <type>Date</type>
</CustomField>