force-app/main/default/objects/Lead/fields/SL_ScanToBIM2__c.field-meta.xml
<CustomField>
    <fullName>SL_ScanToBIM2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_ScanToBIM</label>
    <type>Checkbox</type>
</CustomField>