force-app/main/default/objects/Lead/fields/SL_SeminorMovie_EnterDate__c.field-meta.xml
<CustomField>
    <fullName>SL_SeminorMovie_EnterDate__c</fullName>
    <label>SL_過去セミナー動画の閲覧【準備中】_入力日</label>
    <type>Date</type>
</CustomField>