force-app/main/default/objects/Lead/fields/SL_Shooting_EnterDate__c.field-meta.xml
<CustomField>
    <fullName>SL_Shooting_EnterDate__c</fullName>
    <label>SL_撮影/編集/サポート_入力日</label>
    <type>Date</type>
</CustomField>