force-app/main/default/objects/Lead/fields/SL_siryouseikyuNum__c.field-meta.xml
<CustomField>
    <fullName>SL_siryouseikyuNum__c</fullName>
    <label>MP資料請求フォーム_資料№</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>「MatterportCloudとは？」</fullName>
            </value>
            <value>
                <fullName>「Matterport使用方法紹介」</fullName>
            </value>
            <value>
                <fullName>「改修現場の図面化を効率化」</fullName>
            </value>
            <value>
                <fullName>「公式アドオン機能を使いこなそう」</fullName>
            </value>
            <value>
                <fullName>「Matterportって何？」</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>