force-app/main/default/objects/Lead/fields/SL_source_event__c.field-meta.xml
<CustomField>
    <fullName>SL_source_event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_ソース_イベント</label>
    <type>Checkbox</type>
</CustomField>