force-app/main/default/objects/Lead/fields/SL_source_tel__c.field-meta.xml
<CustomField>
    <fullName>SL_source_tel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_ソース_電話</label>
    <type>Checkbox</type>
</CustomField>