force-app/main/default/objects/Lead/fields/SL_SpaceCreateDate__c.field-meta.xml
<CustomField>
    <fullName>SL_SpaceCreateDate__c</fullName>
    <label>SL_スペース作成日</label>
    <type>Date</type>
</CustomField>