force-app/main/default/objects/Lead/fields/SL_starterplan_5_20_3__c.field-meta.xml
<CustomField>
    <fullName>SL_starterplan_5_20_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_スタータープラン (5～20アクティブスペース / 3ユーザー)</label>
    <type>Checkbox</type>
</CustomField>