force-app/main/default/objects/Lead/fields/SL_TermDate__c.field-meta.xml
<CustomField>
    <fullName>SL_TermDate__c</fullName>
    <label>SL_期限</label>
    <type>Date</type>
</CustomField>