force-app/main/default/objects/Lead/fields/SL_WebContact__c.field-meta.xml
<CustomField>
    <fullName>SL_WebContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_ソース_WEB問い合わせ</label>
    <type>Checkbox</type>
</CustomField>