force-app/main/default/objects/Lead/fields/sourceA_BuildApp__c.field-meta.xml
<CustomField>
    <fullName>sourceA_BuildApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A：BuildApp・マーケ入手（BuildApp）</label>
    <type>Checkbox</type>
</CustomField>