force-app/main/default/objects/Lead/fields/sourceD_BuildApp__c.field-meta.xml
<CustomField>
    <fullName>sourceD_BuildApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D：エンジニアリング入手（BuildApp）</label>
    <type>Checkbox</type>
</CustomField>