force-app/main/default/objects/Lead/fields/Status_Qualified_EnterDate__c.field-meta.xml
<CustomField>
    <fullName>Status_Qualified_EnterDate__c</fullName>
    <description>リード状況の変更日をフローで自動設定</description>
    <label>取引開始済み入力日</label>
    <type>Date</type>
</CustomField>