force-app/main/default/objects/Lead/fields/Status_Valuation_EnterDate__c.field-meta.xml
<CustomField>
    <fullName>Status_Valuation_EnterDate__c</fullName>
    <description>リード状況の変更日をフローで自動設定</description>
    <label>評価中入力日</label>
    <type>Date</type>
</CustomField>