force-app/main/default/objects/Lead/fields/stepIntroMailDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>stepIntroMailDeliveryDate__c</fullName>
    <label>ステップ新規用自己紹介_配信日</label>
    <type>Date</type>
</CustomField>