force-app/main/default/objects/Lead/fields/X23_11_2023__c.field-meta.xml
<CustomField>
    <fullName>X23_11_2023__c</fullName>
    <defaultValue>false</defaultValue>
    <label>23.11 建設技術展2023関東</label>
    <type>Checkbox</type>
</CustomField>