force-app/main/default/objects/Lead/fields/X23_12_DX_2023__c.field-meta.xml
<CustomField>
    <fullName>X23_12_DX_2023__c</fullName>
    <defaultValue>false</defaultValue>
    <label>23.12 建設DX展2023東京</label>
    <type>Checkbox</type>
</CustomField>