force-app/main/default/objects/Lead/fields/X23_12_SPAR2023J__c.field-meta.xml
<CustomField>
    <fullName>X23_12_SPAR2023J__c</fullName>
    <defaultValue>false</defaultValue>
    <label>23.12 SPAR2023J</label>
    <type>Checkbox</type>
</CustomField>