force-app/main/default/objects/Lead/fields/X23_9_DX_2023__c.field-meta.xml
<CustomField>
    <fullName>X23_9_DX_2023__c</fullName>
    <defaultValue>false</defaultValue>
    <label>23.9 建設DX展2023大阪</label>
    <type>Checkbox</type>
</CustomField>