force-app/main/default/objects/Lead/recordTypes/RecordType_slution.recordType-meta.xml
<RecordType>
    <fullName>RecordType_slution</fullName>
    <active>true</active>
    <businessProcess>ソリューション営業部</businessProcess>
    <label>ソリューション営業部</label>
</RecordType>