force-app/main/default/objects/Lead/listViews/BuildApp.listView-meta.xml
<ListView>
    <fullName>BuildApp</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>BuildApp__c</columns>
    <columns>DX_BuildAppsiryouseikyuusouhuzumi__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BuildApp__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>BuildApp資料請求フォーム流入</label>
    <sharedTo>
        <roleAndSubordinatesInternal>role_dx</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>