force-app/main/default/objects/Lead/listViews/DX.listView-meta.xml
<ListView>
    <fullName>DX</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>SL_Department_2__c</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SL_ManagementTarget__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>X23_11_2023__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ソリューション営業部_建設技術展</label>
    <sharedTo>
        <role>UserRole_Solution</role>
    </sharedTo>
</ListView>