force-app/main/default/objects/Lead/listViews/ju_listview_nagatasan.listView-meta.xml
<ListView>
    <fullName>ju_listview_nagatasan</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>永田</value>
    </filters>
    <label>永田さんリード一覧</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Jyukankyo</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>