force-app/main/default/objects/Lead/listViews/listview_solutioneigyoubu.listView-meta.xml
<ListView>
    <fullName>listview_solutioneigyoubu</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>SL_Department_2__c</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SL_ManagementTarget__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ソリューション営業部</label>
</ListView>