force-app/main/default/objects/Lead/listViews/SL_Lead.listView-meta.xml
<ListView>
    <fullName>SL_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>SL</label>
    <queue>SL</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>